<resources>
    <string name="app_name">MyDict</string>
    <string name="main_button_text_archive">Archive</string>
    <string name="main_button_text_next">Next</string>
    <string name="dialog_download_complete">Download completed!</string>
    <string name="tag_gre">gre</string>
    <string name="title_gre">GRE vocabularies</string>
    <string name="tag_toefl">toefl</string>
    <string name="title_toefl">TOEFL vocabularies</string>
    <string name="tag_ielts">ielts</string>
    <string name="title_ielts">IELTS vocabularies</string>
    <string name="dialog_deletion_completed">Deletion completed!</string>
    <string name="vocabulary_setting">Vocabulary Settings</string>
    <string name="group">Group</string>
    <string name="link">Link</string>
    <string name="complete_learning_list">Congratulations! You\'ve completed all vocabularies learning for today!</string>
    <string name="complete_learning_list_and_start_reviewing">You\'ve completed all vocabularies learning list for today! Do you want to start reviewing?</string>
    <string name="ok">OK</string>
    <string name="daily_vocabulary_number">Daily Vocabulary Number</string>
    <string name="set_vocabulary_number">Set the number of vocabularies to learn for each day:</string>
    <string name="vocabulary_list">Vocabulary lists</string>
    <string name="select_list_tag">Please select vocabulary list(s) you want to learn</string>
    <string name="pref_list_tag_key">pref_list_tag</string>
    <string name="pref_daily_count_key">pref_daily_count</string>
    <string name="list_is_empty">Learning list is empty, please download new list!</string>
    <string name="cancel">Cancel</string>
    <string name="pref_learn_list_status">pref_learn_list_status</string>
    <string name="pref_review_list_status">pref_review_list_status</string>
    <string name="pref_last_download_date">pref_last_download</string>
    <string name="my_dict">MyDict</string>
    <string name="search_hint">Search vocabulary to link with</string>
    <string name="search">Search</string>
    <string name="no_group">No other vocabulary linked to this one!</string>
    <string name="vocabularies_of_the_day">Vocabularies of the day</string>
    <string name="list_update_succeed">List updating succeeded!</string>
    <string name="list_update_failed">List updating failed! Please try again later.</string>
    <string name="word_archived">The word is archived. It\'ll not appear in review list in the future!</string>
    <string name="current_vocabulary_is_empty">Please select a vocabulary before view group!</string>
    <string name="currentVocabulaty_is_empty">Please select a vocabulary before view group.</string>
    <string name="download_vocabulary_list">Download Vocabulary List</string>
    <string name="updating_vocabulary_lists">Updating vocabulary lists!</string>
    <string name="pref_today_total_learn">pref_today_total_learn</string>

</resources>
