<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <MultiSelectListPreference android:key="@string/pref_list_tag_key"
        android:title="@string/vocabulary_list"
        android:dialogTitle="@string/select_list_tag"
        android:entries="@array/list_tag_arr_label"
        android:entryValues="@array/list_tag_arr_value"/>

    <ListPreference
        android:key="@string/pref_daily_count_key"
        android:title="@string/daily_vocabulary_number"
        android:dialogTitle="@string/set_vocabulary_number"
        android:entries="@array/daily_number_arr"
        android:entryValues="@array/daily_number_arr"
        android:defaultValue="@integer/default_daily_count"
        android:summary="%s"
         />

</PreferenceScreen>